--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -53,7 +53,7 @@ Indeed, these options did not include the real space Meilisearch takes on the di
 This option was initially introduced as a workaround in case of a bug and is no longer useful since the feature has matured.
 * Rename dump command from `--dumps-dir` to `--dump-dir` (#3175) @dureuill
 * Remove `--snapshot-interval-sec` and `--schedule-snapshot` now accepts an optional integer value specifying the interval in seconds (#3281) @dureuill
-* The `--log-level` option does not take any string to filter the logs anymore, but only accepts the following arguments: `ERROR`, `WARN`, `INFO`, `DEBUG`, `TRACE` and `OFF` (#3293) @loiclec
+* The `--log-level` option and `MEILI_LOG_LEVEL` environment variable now only accept the following arguments: `ERROR`, `WARN`, `INFO`, `DEBUG`, `TRACE` and `OFF` (#3293) @loiclec
 
 ## Revamped primary key inference
 
