--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -36,7 +36,10 @@ Done in #3274 by @dureuill
 * Improve [`download-latest.sh`](https://github.com/meilisearch/meilisearch/blob/main/download-latest.sh) script: integrate apple-silicon binary (#3169) @curquiza
 * Clarify error message when the DB and engine versions are incompatible (#3279) @dureuill
 * Search speed improvements:
-  * synonyms (TBD)
+  * Significantly improve the memory usage of search requests containing multiple long words (#3115) @loiclec  
+  * Significantly improve the performance of the `exactness` ranking rule for search requests containing many words (#3116) @loiclec  
+  * Translate multi-word synonyms into [phrases](https://docs.meilisearch.com/learn/what_is_meilisearch/features.html#phrase-search) when interpreting a search query. This change improves the relevancy of the results and stabilises the latency of search queries containing many multi-word synonyms, removing a source of denial-of-service attacks. (#3125) @loiclec 
+  * Improve the performance of the `proximity` ranking rule for search requests ending with short words (#3118) @loiclec
   * ranking rules (TDB)
   * ... (TBD)
 
