Add changes following the reviews

--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -24,24 +24,22 @@ TBD
 
 # Generate master key option
 
-You can now activate the `--generate-master-key` CLI option when launching Meilisearch.
+You can now take advantage of the `--generate-master-key` CLI option.
 
-This option is particular since it won't launch Meilisearch but will generate a safe-to-use master key for Meilisearch and will exit without any error.
+By using that option, you can easily generate a strong master key to secure your Meilisearch instance easily. Using that option won't start Meilisearch and will exit without any error.
 
 Done in #3274 by @dureuill
 
 ## Other improvements
 
-* Re-enable importing from dumps v1: you can now migrate from Meilisearch v0.20.0 and older to the latest version using a dump (#3170) @dureuill
+* Search speed improvements:
+  * Significantly improve the memory usage of search requests containing multiple long words (#3115) @loiclec
+  * Significantly improve the performance of the `exactness` ranking rule for search requests containing many words (#3116) @loiclec
+  * Translate multi-word synonyms into [phrases](https://docs.meilisearch.com/learn/what_is_meilisearch/features.html#phrase-search) when interpreting a search query. This change improves the relevancy of the results and stabilises the latency of search queries containing many multi-word synonyms, removing a source of denial-of-service attacks. (#3125) @loiclec
+  * Improve the performance of the `proximity` ranking rule for search requests ending with short words (#3118) @loiclec
+* You can now migrate from any old versions of Meilisearch (supporting the dump feature) to the latest version using a single dump. We hope to facilitate your migration to v1.0.0 so you can enjoy the latest features as easily as possible (#3170) @dureuill
 * Improve [`download-latest.sh`](https://github.com/meilisearch/meilisearch/blob/main/download-latest.sh) script: integrate apple-silicon binary (#3169) @curquiza
 * Clarify error message when the DB and engine versions are incompatible (#3279) @dureuill
-* Search speed improvements:
-  * Significantly improve the memory usage of search requests containing multiple long words (#3115) @loiclec  
-  * Significantly improve the performance of the `exactness` ranking rule for search requests containing many words (#3116) @loiclec  
-  * Translate multi-word synonyms into [phrases](https://docs.meilisearch.com/learn/what_is_meilisearch/features.html#phrase-search) when interpreting a search query. This change improves the relevancy of the results and stabilises the latency of search queries containing many multi-word synonyms, removing a source of denial-of-service attacks. (#3125) @loiclec 
-  * Improve the performance of the `proximity` ranking rule for search requests ending with short words (#3118) @loiclec
-  * ranking rules (TDB)
-  * ... (TBD)
 
 # Breaking changes ⚠️
 
@@ -62,7 +60,7 @@ This option was initially introduced as a workaround in case of a bug and is no 
 
 We have improved the primary key inference process when receiving documents for the first time.
 
-If an index's primary key has not been specified earlier, Meilisearch will attempt to infer the primary key by searching for any properties ending with `id`, such as `puid` or` _id`. 
+If an index's primary key has not been specified earlier, Meilisearch will attempt to infer the primary key by searching for any properties ending with `id`, such as `puid` or` _id`.
 
 If only one such key is detected, it will be designated as the index primary key.
 
