--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -47,7 +47,7 @@ Since we are releasing v1.0.0, this is the last time we are introducing breaking
 
 ## New CLI behavior
 
-* For security reasons, Meilisearch will now reject master keys that are less than 16 bytes (#3274) @dureuill
+* As a security measure, Meilisearch will now reject master keys that are less than 16 bytes in [production environment](https://docs.meilisearch.com/learn/configuration/instance_options.html#environment) (#3274) @dureuill
 * Remove `--max-index-size` and `--max-task-db` configuration options (#3278) @dureuill
 Indeed, these options did not include the real space Meilisearch takes on the disk and were not adapted to the user's needs.
 * Remove `--disable-auto-batching` CLI option (#3296) @loiclec
