Add charabia and milli contributions

--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -22,6 +22,8 @@ Here is the exhaustive list of integrations  **not immediately compatible** with
 
 TBD
 
+Done by @ManyTheFish, @dureuill, @choznerol, @crudiedo, @daniel-shuy, @harshalkhachane, @mosuka, @qbx2, @Roms1383, @Sokom141, and @yenwel in #3269 and meilisearch/milli#TBD and all the Charabia's PRs listed [here](https://github.com/meilisearch/charabia/releases/tag/v0.7.0).
+
 # Generate master key option
 
 You can now take advantage of the `--generate-master-key` CLI option.
@@ -33,10 +35,11 @@ Done in #3274 by @dureuill
 ## Other improvements
 
 * Search speed improvements:
-  * Significantly improve the memory usage of search requests containing multiple long words (#3115) @loiclec
-  * Significantly improve the performance of the `exactness` ranking rule for search requests containing many words (#3116) @loiclec
-  * Translate multi-word synonyms into [phrases](https://docs.meilisearch.com/learn/what_is_meilisearch/features.html#phrase-search) when interpreting a search query. This change improves the relevancy of the results and stabilises the latency of search queries containing many multi-word synonyms, removing a source of denial-of-service attacks. (#3125) @loiclec
-  * Improve the performance of the `proximity` ranking rule for search requests ending with short words (#3118) @loiclec
+  * Significantly improve the memory usage of search requests containing multiple long words (#3269 and meilisearch/milli#708) @loiclec
+  * Significantly improve the performance of the `exactness` ranking rule for search requests containing many words (#3269 and meilisearch/milli#709) @loiclec
+  * Translate multi-word synonyms into [phrases](https://docs.meilisearch.com/learn/what_is_meilisearch/features.html#phrase-search) when interpreting a search query. This change improves the relevancy of the results and stabilises the latency of search queries containing many multi-word synonyms, removing a source of denial-of-service attacks. (#3269 and meilisearch/milli#732) @loiclec
+  * Improve the performance of the `proximity` ranking rule for search requests ending with short words (#3269 and meilisearch/milli#733) @loiclec
+  * Limit the reindexing caused by updating settings when not needed (meilisearch/milli#706 and #3269) @GregoryConrad
 * You can now migrate from any old versions of Meilisearch (supporting the dump feature) to the latest version using a single dump. We hope to facilitate your migration to v1.0.0 so you can enjoy the latest features as easily as possible (#3170) @dureuill
 * Improve [`download-latest.sh`](https://github.com/meilisearch/meilisearch/blob/main/download-latest.sh) script: integrate apple-silicon binary (#3169) @curquiza
 * Clarify error message when the DB and engine versions are incompatible (#3279) @dureuill
@@ -118,5 +121,5 @@ These changes do not impact the user experience.
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @amab8901, @colbsmcdolbs, @elbertronnie, @funilrys, @jiangbo212, @mohitsaxenaknoldus, and @shivaylamba.
-- [Milli](https://github.com/meilisearch/milli): @amab8901, @GregoryConrad and @pnhatminh
-- [Charabia](https://github.com/meilisearch/charabia): TBD
+- [Milli](https://github.com/meilisearch/milli): @amab8901, @GregoryConrad and @pnhatminh.
+- [Charabia](https://github.com/meilisearch/charabia): @choznerol, @crudiedo, @daniel-shuy, @harshalkhachane, @mosuka, @qbx2, @Roms1383, @Sokom141, and @yenwel.
