--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -4,7 +4,7 @@
 ⚠️ Since this is a release candidate (RC), we do NOT recommend using it in a production environment. Is something not working as expected? We welcome [bug reports](https://github.com/meilisearch/meilisearch/issues/new/choose) and [feedback about new features](https://github.com/meilisearch/product/discussions).
 
 We are proud to announce we are releasing the first major release of Meilisearch! 🎉 This new release, contrary to v0.30.0, focus on stabilization instead of bringing new features. We took the opportunity to make the final touch regarding breaking changes in the CLI and the error handler.
-To ensure the stability of Meilisearch, we will not introduce any breaking changes in future versions until the release of v2.0.0. Please refer to the following [information](https://github.com/meilisearch/engine-team/blob/main/resources/versioning-policy.md) for a definition of what we consider to be a breaking change in Meilisearch.
+To ensure the stability of Meilisearch, we will not introduce any breaking changes in future versions until the release of v2.0.0. Please refer to our [versioning policy](https://github.com/meilisearch/engine-team/blob/main/resources/versioning-policy.md) for a definition of what we consider to be a breaking change in Meilisearch.
 
 <!-- The following lines should ONLY be put in the official release changelogs -->
 🧰 Most integrations (SDKs, clients, libraries) will be compatible with this version within four hours of the release. Sometimes this can take up to 48 hours, depending on the issues we encounter during the release.
