--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -98,7 +98,7 @@ These changes do not impact the user experience.
   * Add `workflow_dispatch` to flaky.yml (#3041) @curquiza
   * Add a dispatch to the publish binaries workflow (#3100) @curquiza
   * Remove macos-latest and windows-latest usages (#3264) @curquiza
-  * Add a nightly CI: create every day a `nightly` Docker tag based on the latest commit on `main` (#3229 and #3247) @curquiza
+  * Add a nightly CI: create a `nightly` Docker tag every day based on the latest commit on `main` (#3229 and #3247) @curquiza
   * Use ubuntu-18.04 container instead of GitHub hosted actions (#3261) @curquiza
 * Test suite
   * Re-enable dump tests (#3119) @irevoire
