--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -103,7 +103,7 @@ These changes do not impact the user experience.
 * Test suite
   * Re-enable dump tests (#3119) @irevoire
   * Re-enable the dump test on the dates (#3188) @irevoire
-  * Stop snapshotting the version of meilisearch in the dump test (#3208) @irevoire
+  * Stop snapshotting the version of Meilisearch in the dump test (#3208) @irevoire
 * Dependencies
   * Fix update-cargo-toml-version.yml (#3224) @mohitsaxenaknoldus
   * Update CI dependencies (#3179, #3181 and #3180)
