--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -89,7 +89,7 @@ Done in meilisearch/milli#752 and #3269 by @dureuill
 
 # Misc
 
-These changes do not impact the user experience.
+The following changes do not impact user experience.
 
 * GitHub CIs
   * Replace deprecated set-output in GitHub actions (#3015) @funilrys
