--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -26,9 +26,9 @@ Done by @ManyTheFish, @dureuill, @choznerol, @crudiedo, @daniel-shuy, @harshalkh
 
 # Generate master key option
 
-You can now take advantage of the `--generate-master-key` CLI option.
+You can now use the `--generate-master-key` CLI option.
 
-By using that option, you can easily generate a strong master key to secure your Meilisearch instance easily. Using that option won't start Meilisearch and will exit without any error.
+It allows you to easily generate a strong master key to secure your Meilisearch instance. Using this option won't start Meilisearch and will exit without any error.
 
 Done in #3274 by @dureuill
 
