--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -116,7 +116,7 @@ The following changes do not impact user experience.
   * Implement Uuid codec for heed (#3001) @elbertronnie
   * Improve the way we receive the documents payload (#3164) @jiangbo212
   * Improve clarity of the code that receives payloads (#3236) @Kerollmops
-  * Extract the dates out of the dumpv4. (#3012 and #3190) @funilrys @irevoire
+  * Extract the dates out of the dumpv4 (#3012 and #3190) @funilrys @irevoire
   * Rename meilisearch-http (#3112) @colbsmcdolbs
 
 ❤️ Thanks again to our external contributors:
