--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -85,7 +85,7 @@ Done in meilisearch/milli#752 and #3269 by @dureuill
 * Commit SHA and date are now present in the Meilisearch logs when launching Meilisearch from a Docker image (#3212) @brunoocasali
 * Fix `MDB_PAGE_FULL` internal error that would sometimes occur when inserting documents on macOS (#3210) @Kerollmops
 * Re-introduce the `no_space_left_on_device` error (#3263) @irevoire
-* Index date creation and update are now kept when using a dump (#3245) @amab8901
+* Index creation and update dates are now kept when using a dump (#3245) @amab8901
 * Fix documentation link when returning errors (#3288) @loiclec
 
 # Misc
