--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -64,13 +64,13 @@ This option was initially introduced as a workaround in case of a bug and is no 
 
 We have improved the primary key inference process when receiving documents for the first time.
 
-If an index's primary key has not been specified earlier, Meilisearch will attempt to infer the primary key by searching for any properties ending with `id`, such as `puid` or` _id`.
+If an index's primary key has not been specified, Meilisearch will attempt to infer the primary key by searching for any attributes ending with `id`, such as `puid` or` _id`.
 
-If only one such key is detected, it will be designated as the index primary key.
+If only one such attribute is detected, it will be designated as the index's primary key.
 
-If multiple properties ending with `id` are detected, Meilisearch will notify you and ask you to specify the property representing the identifier of your documents instead of choosing the first found one.
+If multiple attributes ending with `id` are detected, Meilisearch will ask you to specify the primary key instead of choosing the first found one.
 
-If no primary key candidates are detected, Meilisearch will continue to throw an error as before.
+If no primary key candidates are detected, Meilisearch will throw an error as before.
 
 Done in meilisearch/milli#752 and #3269 by @dureuill
 
