--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -60,7 +60,7 @@ This option was initially introduced as a workaround in case of a bug and is no 
 * Remove `--snapshot-interval-sec` and `--schedule-snapshot` now accepts an optional integer value specifying the interval in seconds (#3281) @dureuill
 * The `--log-level` option and `MEILI_LOG_LEVEL` environment variable now only accept the following arguments: `ERROR`, `WARN`, `INFO`, `DEBUG`, `TRACE` and `OFF` (#3293) @loiclec
 
-## Revamped primary key inference
+## Revamp primary key inference
 
 We have improved the primary key inference process when receiving documents for the first time.
 
