--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -57,7 +57,7 @@ Please [reach out](https://github.com/meilisearch/meilisearch/discussions/3280) 
 * Remove `--disable-auto-batching` CLI option (#3296) @loiclec
 This option was initially introduced as a workaround in case of a bug and is no longer useful since the feature has matured.
 * Rename dump command from `--dumps-dir` to `--dump-dir` (#3175) @dureuill
-* Remove `--snapshot-interval-sec` and `--schedule-snapshot` now accepts an optional integer value specifying the interval in seconds (#3281) @dureuill
+* Remove `--snapshot-interval-sec`. `--schedule-snapshot` now accepts an optional integer value specifying the interval in seconds (#3281) @dureuill
 * The `--log-level` option and `MEILI_LOG_LEVEL` environment variable now only accept the following arguments: `ERROR`, `WARN`, `INFO`, `DEBUG`, `TRACE` and `OFF` (#3293) @loiclec
 
 ## Revamp primary key inference
