--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -46,7 +46,7 @@ Done in #3274 by @dureuill
 
 # Breaking changes ⚠️
 
-Since we are releasing v1.0.0, this is the last time we are introducing breaking changes to this release before v2.0.0.
+Since we are releasing v1.0.0, this is the last time we introduce breaking changes until v2.0.0.
 
 ## New CLI behavior
 
