--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -3,7 +3,11 @@
 <!-- The following line should NOT be put in the official release changelogs -->
 ⚠️ Since this is a release candidate (RC), we do NOT recommend using it in a production environment. Is something not working as expected? We welcome [bug reports](https://github.com/meilisearch/meilisearch/issues/new/choose) and [feedback about new features](https://github.com/meilisearch/product/discussions).
 
-We are proud to announce we are releasing the first major release of Meilisearch! 🎉 This new release, contrary to v0.30.0, focus on stabilization instead of bringing new features. We took the opportunity to make the final touch regarding breaking changes in the CLI and the error handler.
+We are proud to announce the first major release of Meilisearch! 🎉
+	
+This new release focuses on stabilizing the CLI instead of only introducing new features. We took this opportunity to introduce final breaking changes to the CLI and make the error handler more intuitive. There will be no breaking changes in future versions until the release of v2.0.0. Please refer to our [versioning policy](https://github.com/meilisearch/engine-team/blob/main/resources/versioning-policy.md) for a definition of what we consider to be a breaking change in Meilisearch.
+	
+Despite our focus on stabilizing Meilisearch, we also took the time to improve support for Japanese and Chinese!
 To ensure the stability of Meilisearch, we will not introduce any breaking changes in future versions until the release of v2.0.0. Please refer to our [versioning policy](https://github.com/meilisearch/engine-team/blob/main/resources/versioning-policy.md) for a definition of what we consider to be a breaking change in Meilisearch.
 
 <!-- The following lines should ONLY be put in the official release changelogs -->
