Fix language support part

--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -7,7 +7,7 @@ We are proud to announce the first major release of Meilisearch! 🎉
 
 This new release focuses on stabilizing the CLI instead of only introducing new features. We took this opportunity to introduce final breaking changes to the CLI and make the error handler more intuitive. There will be no breaking changes in future versions until the release of v2.0.0. Please refer to our [versioning policy](https://github.com/meilisearch/engine-team/blob/main/resources/versioning-policy.md) for a definition of what we consider to be a breaking change in Meilisearch.
 
-Despite our focus on stabilizing Meilisearch, we also took the time to improve support for Japanese, Chinese and Korean!
+Despite our focus on stabilizing Meilisearch, we also took the time to improve support for Chinese and Korean!
 
 <!-- The following lines should ONLY be put in the official release changelogs -->
 🧰 Most integrations (SDKs, clients, libraries) will be compatible with this version within four hours of the release. Sometimes this can take up to 48 hours, depending on the issues we encounter during the release.
@@ -28,8 +28,6 @@ Meilisearch is now better supporting Japanese and Chinese languages
 - Improve the Chinese language support:
   - Normalize Chinese characters into Pinyin
   - Disable the HMM (Hidden Markov Model algorithm) feature in Chinese segmentation
-- Improve Japanese language support:
-  - Add a new Japanese normalizer that unifies hiragana and katakana equivalences
 - Improve the Thai language support
 
 Done by @ManyTheFish, @dureuill, @choznerol, @crudiedo, @daniel-shuy, @harshalkhachane, @mosuka, @qbx2, @Roms1383, @Sokom141, and @yenwel in #3269 and meilisearch/milli#TBD and all the Charabia's PRs listed [here](https://github.com/meilisearch/charabia/releases/tag/v0.7.0).
