Add missing PRs

--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -21,16 +21,15 @@ Here is the exhaustive list of integrations  **not immediately compatible** with
 
 # New features and improvements 🔥
 
-# Charabia
+# Improve language support
 
-Meilisearch is now better supporting Japanese and Chinese languages
-- Add the Korean language support
-- Improve the Chinese language support:
-  - Normalize Chinese characters into Pinyin
-  - Disable the HMM (Hidden Markov Model algorithm) feature in Chinese segmentation
-- Improve the Thai language support
+* Add the Korean language support 🇰🇷
+* Improve the Chinese language support:
+  * Normalize Chinese characters into Pinyin
+  * Disable the HMM (Hidden Markov Model algorithm) feature in Chinese segmentation
+* Improve the Thai language support
 
-Done by @ManyTheFish, @dureuill, @choznerol, @crudiedo, @daniel-shuy, @harshalkhachane, @mosuka, @qbx2, @Roms1383, @Sokom141, and @yenwel in #3269 and meilisearch/milli#TBD and all the Charabia's PRs listed [here](https://github.com/meilisearch/charabia/releases/tag/v0.7.0).
+Done by @ManyTheFish, @dureuill, @choznerol, @crudiedo, @daniel-shuy, @harshalkhachane, @mosuka, @qbx2, @Roms1383, @Sokom141, and @yenwel in #3269 and meilisearch/milli#736 and all the Charabia's PRs listed [here](https://github.com/meilisearch/charabia/releases/tag/v0.7.0).
 
 ## Other improvements
 
@@ -50,7 +49,7 @@ Since we are releasing v1.0.0, this is the last time we introduce breaking chang
 
 ## New CLI behavior
 
-* As a security measure, Meilisearch will now reject master keys that are less than 16 bytes in [production environment](https://docs.meilisearch.com/learn/configuration/instance_options.html#environment) (#3274) @dureuill
+* As a security measure, Meilisearch will now reject master keys that are less than 16 bytes in [production environment](https://docs.meilisearch.com/learn/configuration/instance_options.html#environment) (#3274 and #3295) @dureuill
 * Remove `--max-index-size` and `--max-task-db` configuration options (#3278) @dureuill
 These options were not serving their intended purpose of limiting the disk space taken by Meilisearch for the reasons laid out [here](https://github.com/meilisearch/product/discussions/567#discussioncomment-4322126).
 Please [reach out](https://github.com/meilisearch/meilisearch/discussions/3280) if the [new limits](add link) impede your usage.
@@ -59,6 +58,7 @@ This option was initially introduced as a workaround in case of a bug and is no 
 * Rename dump command from `--dumps-dir` to `--dump-dir` (#3175) @dureuill
 * Remove `--snapshot-interval-sec`. `--schedule-snapshot` now accepts an optional integer value specifying the interval in seconds (#3281) @dureuill
 * The `--log-level` option and `MEILI_LOG_LEVEL` environment variable now only accept the following arguments: `ERROR`, `WARN`, `INFO`, `DEBUG`, `TRACE` and `OFF` (#3293) @loiclec
+* Remove hidden but usable CLI arguments `--nb-max-chunks` and `--log-every-n` (#3305) @Kerollmops
 
 ## Revamp primary key inference
 
@@ -105,6 +105,8 @@ The following changes do not impact user experience.
   * Re-enable dump tests (#3119) @irevoire
   * Re-enable the dump test on the dates (#3188) @irevoire
   * Stop snapshotting the version of Meilisearch in the dump test (#3208) @irevoire
+  * Update insta snap tests for index dates of dump v5 (#3302) @loiclec
+  * Add a test on finite pagination placeholder search when distinct is enabled (#3251) @ManyTheFish
 * Dependencies
   * Fix update-cargo-toml-version.yml (#3224) @mohitsaxenaknoldus
   * Update CI dependencies (#3179, #3181 and #3180)
@@ -115,7 +117,7 @@ The following changes do not impact user experience.
   * Replace Slack by Discord in README.md (#3234 and #3276) @tpayet @shivaylamba
 * Internal changes
   * Implement Uuid codec for heed (#3001) @elbertronnie
-  * Improve the way we receive the documents payload (#3164) @jiangbo212
+  * Improve the way we receive the documents payload (#3164 and #3266) @jiangbo212
   * Improve clarity of the code that receives payloads (#3236) @Kerollmops
   * Extract the dates out of the dumpv4 (#3012 and #3190) @funilrys @irevoire
   * Rename meilisearch-http (#3112) @colbsmcdolbs
