Add error handler

--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -21,7 +21,7 @@ Here is the exhaustive list of integrations  **not immediately compatible** with
 
 # New features and improvements 🔥
 
-# Improve language support
+## Improve language support
 
 * Add the Korean language support 🇰🇷
 * Improve the Chinese language support:
@@ -31,14 +31,16 @@ Here is the exhaustive list of integrations  **not immediately compatible** with
 
 Done by @ManyTheFish, @dureuill, @choznerol, @crudiedo, @daniel-shuy, @harshalkhachane, @mosuka, @qbx2, @Roms1383, @Sokom141, and @yenwel in #3269 and meilisearch/milli#736 and all the Charabia's PRs listed [here](https://github.com/meilisearch/charabia/releases/tag/v0.7.0).
 
+## Indexing and search speed improvements
+
+* Significantly improve the memory usage of search requests containing multiple long words (#3269 and meilisearch/milli#708) @loiclec
+* Significantly improve the performance of the `exactness` ranking rule for search requests containing many words (#3269 and meilisearch/milli#709) @loiclec
+* Translate multi-word synonyms into [phrases](https://docs.meilisearch.com/learn/what_is_meilisearch/features.html#phrase-search) when interpreting a search query. This change improves the relevancy of the results and stabilises the latency of search queries containing many multi-word synonyms, removing a source of denial-of-service attacks. (#3269 and meilisearch/milli#732) @loiclec
+* Improve the performance of the `proximity` ranking rule for search requests ending with short words (#3269 and meilisearch/milli#733) @loiclec
+* Limit the reindexing caused by updating settings when not needed (meilisearch/milli#706 and #3269) @GregoryConrad
+
 ## Other improvements
 
-* Search speed improvements:
-  * Significantly improve the memory usage of search requests containing multiple long words (#3269 and meilisearch/milli#708) @loiclec
-  * Significantly improve the performance of the `exactness` ranking rule for search requests containing many words (#3269 and meilisearch/milli#709) @loiclec
-  * Translate multi-word synonyms into [phrases](https://docs.meilisearch.com/learn/what_is_meilisearch/features.html#phrase-search) when interpreting a search query. This change improves the relevancy of the results and stabilises the latency of search queries containing many multi-word synonyms, removing a source of denial-of-service attacks. (#3269 and meilisearch/milli#732) @loiclec
-  * Improve the performance of the `proximity` ranking rule for search requests ending with short words (#3269 and meilisearch/milli#733) @loiclec
-  * Limit the reindexing caused by updating settings when not needed (meilisearch/milli#706 and #3269) @GregoryConrad
 * Using a single dump, you can now migrate from any old version of Meilisearch (supporting the dump feature) to the latest version. We hope to facilitate your migration to v1.0.0 to make it as smooth as possible (#3170) @dureuill
 * Improve [`download-latest.sh`](https://github.com/meilisearch/meilisearch/blob/main/download-latest.sh) script: integrate apple-silicon binary (#3169) @curquiza
 * Clarify error message when the DB and engine versions are incompatible (#3279) @dureuill
@@ -76,9 +78,82 @@ Done in meilisearch/milli#752 and #3269 by @dureuill
 
 ## Error handler changes
 
-* Add a new error `code`: `io_error` (used instead of `internal`) (#3263) @irevoire
-* Add a new error `code`: `too_many_open_files` (used instead of `internal`) (#3263) @irevoire
-* TBD (changes brought by Tamo)
+When Meilisearch returns an error, a `code` field is returned in the JSON object. Multiples of these unclear and vague `code`s have been changed to improve the user experience.
+
+We consider this as a breaking change since, as a developer, it can lead to break your code if you catch one of the following `code`s in your code base:
+* When calling `POST /indexes/swap-indexes`
+  - `duplicate_index_found` is renamed into `invalid_swap_duplicate_index_found`
+  - Sending an array of indexes not containing exactly 2 `indexUids` for a swap operation object now returns `invalid_swap_indexes` instead of a `bad_request`
+* When calling `GET /indexes` and `GET /indexes/:uid`
+  - Using the `limit` parameter wrongly, Meilisearch now returns `invalid_index_limit` instead of `bad_request`
+  - Using the `offset` parameter wrongly, Meilisearch now returns `invalid_index_offset` instead of `bad_request`
+* When calling `POST /indexes` and `PUT /indexes/:uid`
+  - When `uid` is missing in the payload, Meilisearch returns `missing_index_uid` instead of `bad_request`
+  - Sending a value with a different type than `string` or `null` for `primaryKey` now returns `invalid_index_primary_key` instead of `bad_request`
+* When calling `GET /index/:uid/documents` and `GET /indexes/:uid/documents/:uid`
+  - Using the `fields` parameter wrongly, Meilisearch now returns `invalid_document_fields` instead of `bad_request`
+  - Using the `limit` parameter wrongly, Meilisearch now returns `invalid_document_limit` instead of `bad_request`
+  - Using the `offset` parameter wrongly, Meilisearch now returns `invalid_document_offset` instead of `bad_request`
+* When calling `POST /index/:uid/documents` and `PUT /indexes/:uid/documents`
+  - Using the `primaryKey` parameter wrongly, Meilisearch now returns ` invalid_index_primary_key` instead of `bad_request`
+  - When adding a document with a wrongly formatted `_geo` field, Meilisearch now returns `invalid_document_geo_field` instead of `invalid_geo_field`[RENAME]
+* When calling `GET /index/:uid/search` and `POST /indexes/:uid/search`
+  - Using the `q` parameter wrongly, Meilisearch now returns `invalid_search_q` instead of `bad_request`
+  - Using the `offset` parameter wrongly, Meilisearch now returns `invalid_search_offset` instead of `bad_request`
+  - Using the `limit` parameter wrongly, Meilisearch now returns `invalid_search_limit` instead of `bad_request`
+  - Using the `page` parameter wrongly, Meilisearch now returns `invalid_search_page` instead of `bad_request`
+  - Using the `hits_per_page` parameter wrongly, Meilisearch now returns `invalid_search_hits_per_page` instead of `bad_request`
+  - Using the `attributesToRetrieve` parameter wrongly, Meilisearch now returns `invalid_search_attributes_to_retrieve` instead of `bad_request`
+  - Using the `attributesToCrop` parameter wrongly, Meilisearch now returns `invalid_search_attributes_to_crop` instead of `bad_request`
+  - Using the `showMatchesPosition` parameter wrongly, Meilisearch now returns `invalid_search_show_matches_position` instead of `bad_request`
+  - Using the `filter` parameter wrongly, Meilisearch now returns `invalid_search_filter` instead of `bad_request`
+  - Using the `sort` parameter wrongly, Meilisearch now returns `invalid_search_sort` instead of `bad_request`
+  - Using the `facets` parameter wrongly, Meilisearch now returns `invalid_search_facets` instead of `bad_request`
+  - Using the `highlightPreTag` parameter wrongly, Meilisearch now returns `invalid_search_highlight_pre_tag` instead of `bad_request`
+  - Using the `highlightPostTag` parameter wrongly, Meilisearch now returns `invalid_search_highlight_post_tag` instead of `bad_request`
+  - Using the `matchingStrategy` parameter wrongly, Meilisearch now returns `invalid_search_matching_strategy` instead of `bad_request`
+* When calling any `/settings` routes and their sub-routes
+  - Defining the `displayedAttributes` setting wrongly, Meilisearch now returns `invalid_settings_displayed_attributes` instead of `bad_request`
+  - Defining the `searchableAttributes` setting wrongly, Meilisearch now returns `invalid_settings_searchable_attributes` instead of `bad_request`
+  - Defining the `filterableAttributes` setting wrongly, Meilisearch now returns `invalid_settings_filterable_attributes` instead of `bad_request`
+  - Defining the `sortableAttributes` setting wrongly, Meilisearch now returns `invalid_settings_sortable_attributes` instead of `bad_request`
+  - Defining the `rankingRules` setting wrongly, Meilisearch now returns `invalid_settings_ranking_rules` instead of `bad_request`
+  - Defining the `stopWords` setting wrongly, Meilisearch now returns `invalid_settings_stop_words` instead of `bad_request`
+  - Defining the `synonyms` setting wrongly, Meilisearch now returns `invalid_settings_synonyms` instead of `bad_request`
+  - Defining the `distinctAttribute` setting wrongly, Meilisearch now returns `invalid_settings_distinct_attribute` instead of `bad_request`
+  - Defining the `typoTolerance` setting wrongly, Meilisearch now returns `invalid_settings_typo_tolerance` instead of `bad_request`
+  - `invalid_typo_tolerance_min_word_size_for_typos` is not returned anymore and `invalid_settings_typo_tolerance` is returned instead
+  - Defining the `faceting` setting wrongly, Meilisearch now returns `invalid_settings_faceting` instead of `bad_request`
+  - Defining the `pagination` setting wrongly, Meilisearch now returns `invalid_settings_pagination` instead of `bad_request`
+* When calling any `/tasks` routes
+  - Using the `offset` parameter wrongly, Meilisearch now returns `invalid_search_offset` instead of `bad_request`
+  - Using the `limit` parameter wrongly, Meilisearch now returns `invalid_search_limit` instead of `bad_request`
+  - Using the `uids` parameter wrongly, Meilisearch now returns `invalid_task_uids` instead of `invalid_task_uids_filter`
+  - Using the `types` parameter wrongly, Meilisearch now returns `invalid_task_types` instead of `invalid_task_types_filter`
+  - Using the `statuses` parameter wrongly, Meilisearch now returns `invalid_task_statuses` instead of `invalid_task_statuses_filter`
+  - Using the `cancelBy` parameter wrongly, Meilisearch now returns `invalid_task_cancel_by` instead of `invalid_task_canceled_by_filter`
+  - Using the `beforeEnqueuedAt` parameter wrongly, Meilisearch now returns `invalid_task_before_enqueued_at` instead of `invalid_task_date_filter`
+  - Using the `afterEnqueuedAt` parameter wrongly, Meilisearch now returns `invalid_task_after_enqueued_at` instead of `invalid_task_date_filter`
+  - Using the `beforeStartedAt` parameter wrongly, Meilisearch now returns `invalid_task_before_started_at` instead of `invalid_task_date_filter`
+  - Using the `afterStartedAt` parameter wrongly, Meilisearch now returns `invalid_task_after_started_at` instead of `invalid_task_date_filter`
+  - Using the `beforeFinishedAt` parameter wrongly, Meilisearch now returns `invalid_task_before_finished_at` instead of `invalid_task_date_filter`
+  - Using the `afterFinishedAt` parameter wrongly, Meilisearch now returns `invalid_task_after_finished_at` instead of `invalid_task_date_filter`
+* When calling `GET /keys` and `GET /keys/:uid`
+  - Using the `limit` parameter wrongly, Meilisearch now returns `invalid_api_key_limit` instead of `bad_request`
+  - Using the `offset` parameter wrongly, Meilisearch now returns `invalid_api_key_offset` instead of `bad_request`
+* When calling `POST /keys`
+  - If the `actions` field is missing, Meilisearch now returns `missing_api_key_actions` instead of `missing_parameter`
+  - If the `indexes` field is missing, Meilisearch now returns `missing_api_key_indexes` instead of `missing_parameter`
+  - If the `expireAt` field is missing, Meilisearch now returns `missing_api_key_expire_at` instead of `missing_parameter`
+* When Meilisearch does not have enough space
+  - the `no_space_left_on_device` code is returned instead of `internal`
+  - the `system` type is returned instead of `internal`
+* When Meilisearch throw an I/O error
+  - the `io_error` code is returned instead of `internal`
+  - the `system` type is returned instead of `internal`
+* When your machines reaches the maximum number of files allowed to be opened
+  - the `too_many_open_files` code is returned instead of `internal`
+  - the `system` code is returned instead of `internal`
 
 # Fixes 🐞
 
