Add author of error handler

--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -155,6 +155,8 @@ We consider this as a breaking change since, as a developer, it can lead to brea
   - the `too_many_open_files` code is returned instead of `internal`
   - the `system` code is returned instead of `internal`
 
+Done by @irevoire in #3316 and #3263
+
 # Fixes 🐞
 
 * Commit SHA and date are now present in the Meilisearch logs when launching Meilisearch from a Docker image (#3212) @brunoocasali
